javaDSL/src/test/resources/typeSystemTestModels/valid/expressions/ArrayInitializer.java
/* (c) https://github.com/MontiCore/monticore */

package typeSystemTestModels.valid.expressions;

import java.lang.String;

public class ArrayInitializerValid {
  int[] a =  {1,2,3};
  String[] b = {"String", "String"};

}
